# toml-parser

./: .clang-format  CMakeLists.txt  TODO  test.toml
scripts/: reformat_code.sh  run_tests.sh
src/: CMakeLists.txt  array.c  array.h  error.c  error.h  expression.c  expression.h  float.c  float.h  inline_table.c  inline_table.h  integer.c  integer.h  key.c  key.h  key_pair.c  key_pair.h  lexer.l  main.c  parser.y  scalar.c  scalar.h  strings.c  strings.h  table.c  table.h  value.c  value.h
src/scalar/: CMakeLists.txt  date_scalar.c  date_scalar.h  float_scalar.c  float_scalar.h  integer_scalar.c  integer_scalar.h  scalar.c  scalar.h  string_scalar.c  string_scalar.h
tests/: test.toml
